<resources>
    <string name="app_name">Notes</string>
    <string name="item_view_title">My title</string>
    <string name="item_view_date">Jan 21 2020</string>
    <string name="main_activity_title">NOTES</string>
    <string name="new_note_text">+</string>
    <string name="edit_activity_title">Edit Note</string>
    <string name="note_hint_title">Title</string>
    <string name="note_hint_desc">Description</string>
    <string name="save_note_text">SAVE NOTE</string>
    <string name="add_activity_title">Add new note</string>
    <string name="main_menu_text">Notepad</string>
    <string name="settings_header">SETTINGS</string>
    <string name="description_toggle_text">Description Toggle</string>
    <string name="item_view_desc">My long description</string>
    <string name="search_hint">search</string>
</resources>