<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#03A9F4"
    android:padding="20dp"
    tools:context=".EditNoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titletextview"
        android:text="@string/edit_activity_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner"
        android:padding="10dp"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/titleinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3003A9F4"
            android:hint="@string/note_hint_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptioninput"
            android:hint="@string/note_hint_desc"
            android:background="#3003A9F4"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:lines="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_note_text"
        android:id="@+id/savebutton"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:textColor="#03A9F4"/>

</LinearLayout>